--- a/todos-app/index.html
+++ b/todos-app/index.html
@@ -5,7 +5,7 @@
     <title>Hello World</title>
 </head>
 <body>
-    <div id="content"></div>
+    <div id="root"></div>
     <script src="./dist/bundle.js"></script>
 </body>
 </html>
