--- a/todos-app/index.html
+++ b/todos-app/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>React Demo</title>
+    <link href="./public/style.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div id="root"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div id="todolist">
+
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./dist/bundle.js"></script>
 </body>
 </html>
