--- a/todos-app-with-backend/public/index.html
+++ b/todos-app-with-backend/public/index.html
@@ -18,6 +18,7 @@
             <div class="col-md-6">
                 <div id="todolist"></div>
             </div>
+            <div class="col-md-3"></div>
         </div>
     </div>
     <script src="../dist/bundle.js"></script>
