--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello React</h1>
+    <h2>Test</h2>
     <div id="content"></div>
     <script src ='./dist/bundle.js'></script>
 </body>
